@@ -29,26 +29,20 @@
       <library name="apache-mime4j-dom-0.7.2.jar"/>
       <library name="asm-debug-all-4.1.jar"/>
       <library name="aspectjrt-1.8.0.jar"/>
-      <library name="bcmail-jdk15-1.45.jar"/>
       <library name="bcmail-jdk15on-1.52.jar"/>
       <library name="bcpkix-jdk15on-1.52.jar"/>
-      <library name="bcprov-jdk15-1.45.jar"/>
       <library name="bcprov-jdk15on-1.52.jar"/>
       <library name="boilerpipe-1.1.0.jar"/>
       <library name="bzip2-0.9.1.jar"/>
       <library name="c3p0-0.9.1.1.jar"/>
       <library name="cdm-4.5.5.jar"/>
-      <library name="commons-codec-1.6.jar"/>
       <library name="commons-codec-1.9.jar"/>
-      <library name="commons-compress-1.8.1.jar"/>
       <library name="commons-compress-1.9.jar"/>
       <library name="commons-csv-1.0.jar"/>
-      <library name="commons-httpclient-3.1.jar"/>
       <library name="commons-logging-1.1.1.jar"/>
       <library name="commons-logging-api-1.1.jar"/>
       <library name="commons-vfs2-2.0.jar"/>
       <library name="ehcache-core-2.6.2.jar"/>
-      <library name="fontbox-1.8.8.jar"/>
       <library name="fontbox-1.8.9.jar"/>
       <library name="grib-4.5.5.jar"/>
       <library name="guava-10.0.1.jar"/>
@@ -62,10 +56,8 @@
       <library name="jcommander-1.35.jar"/>
       <library name="jdom-1.0.jar"/>
       <library name="jdom2-2.0.4.jar"/>
-      <library name="jempbox-1.8.8.jar"/>
       <library name="jempbox-1.8.9.jar"/>
       <library name="jhighlight-1.0.2.jar"/>
-      <library name="jhighlight-1.0.jar"/>
       <library name="jj2000-5.2.jar"/>
       <library name="jmatio-1.0.jar"/>
       <library name="jna-4.1.0.jar"/>
@@ -77,37 +69,25 @@
       <library name="maven-scm-api-1.4.jar"/>
       <library name="maven-scm-provider-svn-commons-1.4.jar"/>
       <library name="maven-scm-provider-svnexe-1.4.jar"/>
-      <library name="metadata-extractor-2.6.2.jar"/>
       <library name="metadata-extractor-2.8.0.jar"/>
-      <library name="netcdf-4.2.20.jar"/>
       <library name="netcdf4-4.5.5.jar"/>
-      <library name="pdfbox-1.8.8.jar"/>
       <library name="pdfbox-1.8.9.jar"/>
       <library name="plexus-utils-1.5.6.jar"/>
-      <library name="poi-3.11.jar"/>
       <library name="poi-3.12-beta1.jar"/>
-      <library name="poi-ooxml-3.11.jar"/>
       <library name="poi-ooxml-3.12-beta1.jar"/>
-      <library name="poi-ooxml-schemas-3.11.jar"/>
       <library name="poi-ooxml-schemas-3.12-beta1.jar"/>
-      <library name="poi-scratchpad-3.11.jar"/>
       <library name="poi-scratchpad-3.12-beta1.jar"/>
       <library name="protobuf-java-2.5.0.jar"/>
       <library name="quartz-2.2.0.jar"/>
       <library name="regexp-1.3.jar"/>
       <library name="rome-0.9.jar"/>
-      <library name="slf4j-api-1.6.1.jar"/>
       <library name="slf4j-api-1.7.12.jar"/>
       <library name="sqlite-jdbc-3.8.6.jar"/>
       <library name="tagsoup-1.2.1.jar"/>
-      <library name="tika-parsers-1.7.jar"/>
       <library name="tika-parsers-1.8.jar"/>
       <library name="udunits-4.5.5.jar"/>
-      <library name="unidataCommon-4.2.20.jar"/>
       <library name="vorbis-java-core-0.6.jar"/>
       <library name="vorbis-java-tika-0.6.jar"/>
-      <library name="xercesImpl-2.8.1.jar"/>
-      <library name="xml-apis-1.3.03.jar"/>
       <library name="xmlbeans-2.6.0.jar"/>
       <library name="xmpcore-5.1.2.jar"/>
       <library name="xz-1.5.jar"/>
