@@ -2,6 +2,8 @@ Nutch Change Log
   
 Nutch Current Development 1.11-SNAPSHOT
 
+* NUTCH-2048 parse-tika: fix dependencies in plugin.xml (Michael Joyce via snagel)
+
 * NUTCH-2066 Parameterize Generate REST endpoint (Sujen Shah via mattmann)
 
 * NUTCH-2072 Deflate encoding support is broken when http.content.limit is set to -1 (Tanguy Moal via mattmann)
